force-app/main/default/objects/Account/fields/Cliente_Digito__c.field-meta.xml
<CustomField>
    <fullName>Cliente_Digito__c</fullName>
    <label>Cliente Digito</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>