force-app/main/default/objects/Account/fields/CLTV__c.field-meta.xml
<CustomField>
    <fullName>CLTV__c</fullName>
    <description>Valor Neto del cliente</description>
    <label>CLTV</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>