force-app/main/default/objects/Account/fields/CP_BillingStateCode__c.field-meta.xml
<CustomField>
    <fullName>CP_BillingStateCode__c</fullName>
    <description>Código de Estado del sistema de Cartera</description>
    <label>Código de Estado de Residencia</label>
    <length>10</length>
    <type>Text</type>
</CustomField>