force-app/main/default/objects/Account/fields/CP_CLTV__c.field-meta.xml
<CustomField>
    <fullName>CP_CLTV__c</fullName>
    <description>Valor Neto del cliente</description>
    <label>CLTV</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>