force-app/main/default/objects/Account/fields/CP_CRMCreationDate__c.field-meta.xml
<CustomField>
    <fullName>CP_CRMCreationDate__c</fullName>
    <description>Fecha de Creación de Cliente en Salesforce</description>
    <formula>DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha Creación Cliente CRM</label>
    <type>Date</type>
</CustomField>