force-app/main/default/objects/Account/fields/CP_CRMCustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>CP_CRMCustomerNumber__c</fullName>
    <displayFormat>CRM-{0000000000}</displayFormat>
    <externalId>true</externalId>
    <label>#Cliente CRM</label>
    <type>AutoNumber</type>
</CustomField>