force-app/main/default/objects/Account/fields/CP_CustomerSince__c.field-meta.xml
<CustomField>
    <fullName>CP_CustomerSince__c</fullName>
    <description>Fecha de alta del cliente en sistema de cartera.</description>
    <label>Fecha Alta</label>
    <type>Date</type>
</CustomField>