force-app/main/default/objects/Account/fields/CP_Efficiency__c.field-meta.xml
<CustomField>
    <fullName>CP_Efficiency__c</fullName>
    <label>Eficiencia</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>