force-app/main/default/objects/Account/fields/CP_IncomeStatement__c.field-meta.xml
<CustomField>
    <fullName>CP_IncomeStatement__c</fullName>
    <label>Fase del Estado de Resultados</label>
    <length>40</length>
    <type>Text</type>
</CustomField>