force-app/main/default/objects/Account/fields/CP_MonthlyIncome__c.field-meta.xml
<CustomField>
    <fullName>CP_MonthlyIncome__c</fullName>
    <description>Muestra el Ingreso Mensual del Cliente en pesos y viene del sistema de cartera</description>
    <label>Ingreso Mensual</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>