force-app/main/default/objects/Account/fields/CP_RFM__c.field-meta.xml
<CustomField>
    <fullName>CP_RFM__c</fullName>
    <description>Nivel de rentabilidad del cliente</description>
    <label>RFM</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>