force-app/main/default/objects/Account/fields/CP_ShippingCityCode__c.field-meta.xml
<CustomField>
    <fullName>CP_ShippingCityCode__c</fullName>
    <description>Código de Ciudad del sistema de Cartera</description>
    <label>Código de Ciudad de Entrega de Tarjeta</label>
    <length>10</length>
    <type>Text</type>
</CustomField>