force-app/main/default/objects/Account/fields/CP_ShippingStateCode__c.field-meta.xml
<CustomField>
    <fullName>CP_ShippingStateCode__c</fullName>
    <description>Código del Estado del Domicilio de Entrega</description>
    <label>Código de Estado de Entrega de Tarjeta</label>
    <length>10</length>
    <type>Text</type>
</CustomField>