force-app/main/default/objects/Account/fields/CP_TotalDebt__c.field-meta.xml
<CustomField>
    <fullName>CP_TotalDebt__c</fullName>
    <label>Usted Debe</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>