force-app/main/default/objects/Account/fields/CP_TotalDelay__c.field-meta.xml
<CustomField>
    <fullName>CP_TotalDelay__c</fullName>
    <label>Total Atrasos</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>