force-app/main/default/objects/Account/fields/CP_TotalMonthlyPayment__c.field-meta.xml
<CustomField>
    <fullName>CP_TotalMonthlyPayment__c</fullName>
    <label>Total Abono Mensual</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>