force-app/main/default/objects/Account/fields/CP_TotalPassToPay__c.field-meta.xml
<CustomField>
    <fullName>CP_TotalPassToPay__c</fullName>
    <label>Total Pase a Pagar</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>