force-app/main/default/objects/Account/fields/CP_TotalPaymentDue__c.field-meta.xml
<CustomField>
    <fullName>CP_TotalPaymentDue__c</fullName>
    <label>Total Ab. Vencido</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>