force-app/main/default/objects/Account/fields/CP_TotalPayWith__c.field-meta.xml
<CustomField>
    <fullName>CP_TotalPayWith__c</fullName>
    <label>Total Pague Con</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>