force-app/main/default/objects/Account/fields/CP_WalletCustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>CP_WalletCustomerNumber__c</fullName>
    <description>Número de cliente crédito (Sistema Cartera).</description>
    <externalId>true</externalId>
    <inlineHelpText>Número de cliente crédito (Sistema Cartera).</inlineHelpText>
    <label>#Cliente Crédito</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>