force-app/main/default/objects/Account/fields/CP_WalletCustomerNumberTxt__c.field-meta.xml
<CustomField>
    <fullName>CP_WalletCustomerNumberTxt__c</fullName>
    <description>Número de cliente crédito (Sistema Cartera).</description>
    <formula>TEXT(CP_WalletCustomerNumber__c)</formula>
    <inlineHelpText>Número de cliente crédito (Sistema Cartera).</inlineHelpText>
    <label>#Cliente Crédito</label>
    <type>Text</type>
</CustomField>