force-app/main/default/objects/Account/fields/Desde_Integracion__c.field-meta.xml
<CustomField>
    <fullName>Desde_Integracion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Desde Integración</label>
    <type>Checkbox</type>
</CustomField>