force-app/main/default/objects/Account/fields/Dia_de_Creacion__c.field-meta.xml
<CustomField>
    <fullName>Dia_de_Creacion__c</fullName>
    <formula>DAY(DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Día de Creación</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>