force-app/main/default/objects/Account/fields/dsalesActividad__c.field-meta.xml
<CustomField>
    <fullName>dsalesActividad__c</fullName>
    <label>Actividad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tienda Departamental</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>