force-app/main/default/objects/Account/fields/dsalesCodigoColonia__c.field-meta.xml
<CustomField>
    <fullName>dsalesCodigoColonia__c</fullName>
    <description>Campo para registrar el código de la colonia</description>
    <label>Código de colonia</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>