force-app/main/default/objects/Account/fields/dsalesCodigoEstado__c.field-meta.xml
<CustomField>
    <fullName>dsalesCodigoEstado__c</fullName>
    <description>Campo para recibir el código de estado donde redice el cliente</description>
    <label>Código de estado</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>