force-app/main/default/objects/Account/fields/dsalesFechaConstitucion__c.field-meta.xml
<CustomField>
    <fullName>dsalesFechaConstitucion__c</fullName>
    <label>Fecha de Constitución</label>
    <type>Date</type>
</CustomField>