force-app/main/default/objects/Account/fields/dsalesGiroComercial__c.field-meta.xml
<CustomField>
    <fullName>dsalesGiroComercial__c</fullName>
    <label>Giro comercial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0020 Comercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>