force-app/main/default/objects/Account/fields/dsalesNacionalidadSociedad__c.field-meta.xml
<CustomField>
    <fullName>dsalesNacionalidadSociedad__c</fullName>
    <label>Nacionalidad de la Sociedad</label>
    <length>30</length>
    <type>Text</type>
</CustomField>