force-app/main/default/objects/Account/fields/dsalesNombreApoderadoLegal__c.field-meta.xml
<CustomField>
    <fullName>dsalesNombreApoderadoLegal__c</fullName>
    <label>Nombre del apoderado legal</label>
    <length>30</length>
    <type>Text</type>
</CustomField>