force-app/main/default/objects/Account/fields/dsalesNumeroExterior__c.field-meta.xml
<CustomField>
    <fullName>dsalesNumeroExterior__c</fullName>
    <description>Campo para recibir el numero exterior</description>
    <label>Número exterior</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>