force-app/main/default/objects/Account/fields/dsalesNumeroInterior__c.field-meta.xml
<CustomField>
    <fullName>dsalesNumeroInterior__c</fullName>
    <description>Campo para recibir el numero interior</description>
    <label>Número interior</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>