force-app/main/default/objects/Account/fields/dsalesRfc__c.field-meta.xml
<CustomField>
    <fullName>dsalesRfc__c</fullName>
    <label>RFC</label>
    <length>16</length>
    <type>Text</type>
</CustomField>