force-app/main/default/objects/Account/fields/dsalesSegundoCorreo__c.field-meta.xml
<CustomField>
    <fullName>dsalesSegundoCorreo__c</fullName>
    <label>Segundo correo</label>
    <type>Email</type>
</CustomField>