force-app/main/default/objects/Account/fields/dsalesTipoPersona__c.field-meta.xml
<CustomField>
    <fullName>dsalesTipoPersona__c</fullName>
    <label>Tipo de persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Física</fullName>
            </value>
            <value>
                <fullName>Moral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>