force-app/main/default/objects/Account/fields/Fecha_de_Nacimiento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Nacimiento__c</fullName>
    <formula>PersonContact.Birthdate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de Nacimiento</label>
    <type>Date</type>
</CustomField>