force-app/main/default/objects/Account/fields/Formulario_Seller__c.field-meta.xml
<CustomField>
    <fullName>Formulario_Seller__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Formulario Seller</label>
    <referenceTo>MX_CP_MKTP_Formulario_Seller__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>