force-app/main/default/objects/Account/fields/Hora_de_Creacion__c.field-meta.xml
<CustomField>
    <fullName>Hora_de_Creacion__c</fullName>
    <formula>IF(
  OR(
    VALUE( MID( TEXT( CreatedDate - 0.2083 ), 12, 2 ) ) = 0,
    VALUE( MID( TEXT( CreatedDate - 0.2083 ), 12, 2 ) ) = 12
  ),
  &quot;12&quot;,
  TEXT( VALUE( MID( TEXT( CreatedDate - 0.2083 ), 12, 2 ) ) 
   -
   IF( 
     VALUE( MID( TEXT( CreatedDate - 0.2083 ), 12, 2 ) ) &lt; 12, 
     0, 
     12 
   ) 
  )
)
&amp; &quot;:&quot; &amp;
MID( TEXT( CreatedDate - 0.2083 ), 15, 2 )
&amp; &quot;:&quot; &amp;
MID( TEXT( CreatedDate - 0.2083 ), 18, 2 )
&amp; &quot; &quot; &amp;
IF(
  VALUE( MID( TEXT( CreatedDate - 0.2083 ), 12, 2 ) ) &lt; 12,
  &quot;AM&quot;,
  &quot;PM&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hora de Creación</label>
    <type>Text</type>
</CustomField>