force-app/main/default/objects/Account/fields/MX_CP_MKTP_ACC_Shop_Id__c.field-meta.xml
<CustomField>
    <fullName>MX_CP_MKTP_ACC_Shop_Id__c</fullName>
    <description>Campo que contiene el Shop ID de la Tienda de Mirakl Traido desde el Prospecto</description>
    <externalId>true</externalId>
    <label>Shop Id</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>