force-app/main/default/objects/Account/fields/MX_CP_MKTP_Catregor_a_Principal__c.field-meta.xml
<CustomField>
    <fullName>MX_CP_MKTP_Catregor_a_Principal__c</fullName>
    <label>Categoría Principal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Animales y Mascotas</fullName>
            </value>
            <value>
                <fullName>Automotriz</fullName>
            </value>
            <value>
                <fullName>Calzado, Ropa y Accesorios</fullName>
            </value>
            <value>
                <fullName>Celulares y Telefonía</fullName>
            </value>
            <value>
                <fullName>Consolas y videojuegos</fullName>
            </value>
            <value>
                <fullName>Deportes y Aire Libre</fullName>
            </value>
            <value>
                <fullName>Electrónica</fullName>
            </value>
            <value>
                <fullName>Herramientas y Mejoras para el Hogar</fullName>
            </value>
            <value>
                <fullName>Hogar y Jardín</fullName>
            </value>
            <value>
                <fullName>Industrias y Oficinas</fullName>
            </value>
            <value>
                <fullName>Instrumentos Musicales</fullName>
            </value>
            <value>
                <fullName>Juguetes</fullName>
            </value>
            <value>
                <fullName>Lentes y Joyería</fullName>
            </value>
            <value>
                <fullName>Libros, Revistas y Comics</fullName>
            </value>
            <value>
                <fullName>Productos Para Bebés y Niños Pequeños</fullName>
            </value>
            <value>
                <fullName>Relojes</fullName>
            </value>
            <value>
                <fullName>Salud, Belleza y Cuidado Personal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>