force-app/main/default/objects/Account/fields/MX_CP_MKTP_Clasificacion_Tienda__c.field-meta.xml
<CustomField>
    <fullName>MX_CP_MKTP_Clasificacion_Tienda__c</fullName>
    <label>Clasificación de Tienda</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Longtail</fullName>
            </value>
            <value>
                <fullName>Medium Seller</fullName>
            </value>
            <value>
                <fullName>Top Seller</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>