force-app/main/default/objects/Account/fields/MX_CP_MKTP_Estatus_Tienda__c.field-meta.xml
<CustomField>
    <fullName>MX_CP_MKTP_Estatus_Tienda__c</fullName>
    <label>Estatus Tienda</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tienda Activa</fullName>
                <default>true</default>
                <label>Tienda Activa</label>
            </value>
            <value>
                <fullName>Tienda Desactivada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>