force-app/main/default/objects/Account/fields/MX_CP_MKTP_Fecha_Hora_Aceptacion_TYC__c.field-meta.xml
<CustomField>
    <fullName>MX_CP_MKTP_Fecha_Hora_Aceptacion_TYC__c</fullName>
    <description>Fecha y Hora en que aceptó el cliente los términos y condiciones del Seller</description>
    <inlineHelpText>Fecha y Hora en que aceptó el cliente los términos y condiciones del Seller</inlineHelpText>
    <label>Fecha/Hora Aceptación TYC</label>
    <type>DateTime</type>
</CustomField>