force-app/main/default/objects/Account/fields/MX_CP_MKTP_Mirakl_Shop_State__c.field-meta.xml
<CustomField>
    <fullName>MX_CP_MKTP_Mirakl_Shop_State__c</fullName>
    <description>State of the shop
One of: OPEN, CLOSE, SUSPENDED</description>
    <label>Shop State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MX_CP_MKTP_Shop_State</valueSetName>
    </valueSet>
</CustomField>