force-app/main/default/objects/Account/fields/MX_CP_MKTP_Razon_Social__c.field-meta.xml
<CustomField>
    <fullName>MX_CP_MKTP_Razon_Social__c</fullName>
    <label>Razón Social</label>
    <length>100</length>
    <type>Text</type>
</CustomField>