force-app/main/default/objects/Account/fields/MX_CP_MKTP_RFC_de_la_Empresa__c.field-meta.xml
<CustomField>
    <fullName>MX_CP_MKTP_RFC_de_la_Empresa__c</fullName>
    <externalId>true</externalId>
    <label>RFC de la Empresa</label>
    <length>15</length>
    <type>Text</type>
</CustomField>