force-app/main/default/objects/Account/fields/MX_CP_MKTP_Shop_Suspension_Type__c.field-meta.xml
<CustomField>
    <fullName>MX_CP_MKTP_Shop_Suspension_Type__c</fullName>
    <label>Shop Suspension Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>