force-app/main/default/objects/Account/fields/SearchableEmail__c.field-meta.xml
<CustomField>
    <fullName>SearchableEmail__c</fullName>
    <formula>PersonEmail</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SearchableEmail</label>
    <type>Text</type>
</CustomField>