force-app/main/default/objects/Account/fields/Utilidad_Futura__c.field-meta.xml
<CustomField>
    <fullName>Utilidad_Futura__c</fullName>
    <label>Utilidad Futura</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>