force-app/main/default/objects/Account/recordTypes/MX_CP_MKTP_MarketPlace.recordType-meta.xml
<RecordType>
    <fullName>MX_CP_MKTP_MarketPlace</fullName>
    <active>true</active>
    <label>MarketPlace</label>
</RecordType>