force-app/main/default/objects/Account/validationRules/Correo_electronico_obligatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>Correo_electronico_obligatorio</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISNEW(),
    ISBLANK( PersonEmail ) ,
    NOT( ISPICKVAL($User.CP_UserType__c, &apos;Soporte N1&apos;) )
   )</errorConditionFormula>
    <errorDisplayField>PersonEmail</errorDisplayField>
    <errorMessage>Favor de capturar un correo electrónico</errorMessage>
</ValidationRule>