force-app/main/default/objects/Account/validationRules/CP_CantUpdateGender.validationRule-meta.xml
<ValidationRule>
    <fullName>CP_CantUpdateGender</fullName>
    <active>false</active>
    <description>El Género no puede ser actualizado.</description>
    <errorConditionFormula>AND( ISCHANGED( CP_Gender__pc )
    ,NOT ( ISBLANK ( PriorValue( CP_Gender__pc ) ) )
    ,$Permission.CP_CatchAccountVR = TRUE
)</errorConditionFormula>
    <errorDisplayField>CP_Gender__pc</errorDisplayField>
    <errorMessage>El Género no puede ser actualizado.</errorMessage>
</ValidationRule>