force-app/main/default/objects/Account/validationRules/CP_CantUpdateRecord.validationRule-meta.xml
<ValidationRule>
    <fullName>CP_CantUpdateRecord</fullName>
    <active>true</active>
    <description>No se debe permitir la actualización de los datos del Cliente.</description>
    <errorConditionFormula>AND( 
    NOT( ISNEW() ),
				Desde_Integracion__c = FALSE,
    $Permission.CP_CatchAccountVR = TRUE,
    NOT(ISCHANGED(CP_FlagYalo__pc)) 
)</errorConditionFormula>
    <errorMessage>Por el momento no es posible actualizar los datos del Cliente.</errorMessage>
</ValidationRule>