force-app/main/default/objects/Account/validationRules/CP_FirstNameRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>CP_FirstNameRequired</fullName>
    <active>true</active>
    <description>El campo Nombre(s) debe ser requerido.</description>
    <errorConditionFormula>AND( ISBLANK( FirstName )
    ,$Permission.CP_CatchAccountVR = TRUE
   )</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>El Nombre(s) es requerido.</errorMessage>
</ValidationRule>