force-app/main/default/objects/Account/validationRules/CP_HomePhone_RequiredWhenNoMobile.validationRule-meta.xml
<ValidationRule>
    <fullName>CP_HomePhone_RequiredWhenNoMobile</fullName>
    <active>true</active>
    <description>Se debe requerir el teléfono de casa si el cliente no registra un teléfono celular.</description>
    <errorConditionFormula>AND( ISBLANK( PersonMobilePhone )
    ,ISBLANK( PersonHomePhone )
    ,$Permission.CP_CatchAccountVR = TRUE
   )</errorConditionFormula>
    <errorDisplayField>PersonHomePhone</errorDisplayField>
    <errorMessage>Si el cliente no te proporcionó un número de Celular, pide el teléfono de su domicilio.</errorMessage>
</ValidationRule>