force-app/main/default/objects/Account/validationRules/CP_SuffixRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>CP_SuffixRequired</fullName>
    <active>false</active>
    <description>El campo Apellido Materno debe ser requerido.</description>
    <errorConditionFormula>AND( ISBLANK( Suffix )
    ,$Permission.CP_CatchAccountVR = TRUE
   )</errorConditionFormula>
    <errorDisplayField>Suffix</errorDisplayField>
    <errorMessage>El Apellido Materno es requerido.</errorMessage>
</ValidationRule>