force-app/main/default/objects/Account/validationRules/Fecha_de_nacimiento_obligatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>Fecha_de_nacimiento_obligatorio</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISNEW() ,
    ISBLANK( PersonBirthdate ),
    ISPICKVAL($User.CP_UserType__c, &apos;Soporte N1&apos;) 
			)</errorConditionFormula>
    <errorDisplayField>PersonBirthdate</errorDisplayField>
    <errorMessage>Favor de capturar la fecha de nacimiento</errorMessage>
</ValidationRule>