force-app/main/default/objects/Account/validationRules/Medio_de_contacto_obligatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>Medio_de_contacto_obligatorio</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISNEW(),
    ISPICKVAL( CP_PreferredContactChannel__pc , &apos;&apos;),
    ISPICKVAL($User.CP_UserType__c, &apos;Soporte N1&apos;) 
			)</errorConditionFormula>
    <errorDisplayField>CP_PreferredContactChannel__pc</errorDisplayField>
    <errorMessage>Favor de capturar un medio de contacto</errorMessage>
</ValidationRule>