force-app/main/default/objects/Account/validationRules/Nombres_Obligatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>Nombres_Obligatorio</fullName>
    <active>true</active>
    <errorConditionFormula>AND(   RecordType.DeveloperName = &apos;PersonAccount&apos;,
	ISBLANK(FirstName)  
					)</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>Favor de capturar el nombre.</errorMessage>
</ValidationRule>