force-app/main/default/objects/Account/validationRules/Rango_de_horario_obligatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>Rango_de_horario_obligatorio</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISNEW(),
    ISBLANK( CP_PreferredContactHourRange__pc ),
    ISPICKVAL($User.CP_UserType__c, &apos;Soporte N1&apos;) 
			)</errorConditionFormula>
    <errorDisplayField>CP_PreferredContactHourRange__pc</errorDisplayField>
    <errorMessage>Favor de capturar un rango de horario</errorMessage>
</ValidationRule>