force-app/main/default/objects/Account/listViews/DSales_Todos_los_clientes.listView-meta.xml
<ListView>
    <fullName>DSales_Todos_los_clientes</fullName>
    <columns>PC_FIRST_NAME</columns>
    <columns>PC_MIDDLE_NAME</columns>
    <columns>PC_LAST_NAME</columns>
    <columns>PC_EMAIL</columns>
    <columns>CP_CRMCustomerNumber__c</columns>
    <columns>Tipo_de_Cliente__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CP_WalletCustomerNumber__c</columns>
    <columns>Fecha_de_Nacimiento__c</columns>
    <columns>FinServ__Gender__pc</columns>
    <filterScope>Everything</filterScope>
    <label>Todos los clientes</label>
    <sharedTo>
        <role>DSALES_Admin_GEX</role>
        <role>DSALES_Admin_SM</role>
    </sharedTo>
</ListView>