force-app/main/default/objects/Account/listViews/Sellers_Martketplace.listView-meta.xml
<ListView>
    <fullName>Sellers_Martketplace</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>MX_CP_MKTP_ACC_Shop_Id__c</columns>
    <columns>MX_CP_MKTP_Mirakl_Shop_State__c</columns>
    <columns>MX_CP_MKTP_Shop_Suspension_Type__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CP_CRMCreationDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.MX_CP_MKTP_MarketPlace</value>
    </filters>
    <label>Sellers Martketplace</label>
</ListView>